# ai-film-pipeline

./: .env.example  .gitignore  Dockerfile  INTERVIEW_QA.md  Makefile  PROGRESS.md  PROJECT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_resize_embedding_384.py
film/: main.py  state.py  storage.py
film/activities/: assets.py  finalize.py  research.py  script.py  storyboard.py
film/api/: deps.py  health.py
film/api/v1/: projects.py  router.py
film/core/: config.py  logging.py
film/db/: models.py  session.py
film/kafka/: consumer.py  producer.py  topics.py
film/schemas/: __init__.py  common.py  project.py
film/temporal/: client.py  worker.py
film/workflows/: production.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: CreateProjectModal.tsx  ProgressBar.tsx  ProjectCard.tsx  ServiceHealth.tsx  StatusBadge.tsx
frontend/src/pages/: Dashboard.tsx  ProjectDetail.tsx
frontend/src/types/: index.ts
tests/: conftest.py  test_health.py  test_projects.py
