[project]
name = "film-pipeline"
version = "0.1.0"
description = "Distributed AI orchestration platform for documentary video generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "temporalio>=1.9",
    "aiokafka>=0.11",
    "redis[asyncio]>=5.0",
    "structlog>=24.1",
    "pgvector>=0.3",
    "orjson>=3.9",
    "minio>=7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["film"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires running docker-compose stack"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
